--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2021"
 nom = "7.1.0"
 anyhow = "*"
 threadpool = "1.8.1"
-glob = "0.3.0"
 structopt = "0.3.25"
 lazy_static = "1.4.0"
 chrono = "0.4.19"
+tinytemplate = "1.2.1"
+serde = { version = "1.0", features = ["derive"] }
