--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ lazy_static = "1.4.0"
 chrono = "0.4.19"
 tinytemplate = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8.23"
