--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ chrono = "0.4.19"
 tinytemplate = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8.23"
+rustls = "0.20.2"
+rustls-pemfile = "0.2.1"
